--- a/index.html
+++ b/index.html
@@ -14,17 +14,17 @@
 
 <body>
 
-  <div class="aaa">
+  <div class="header">
     <img src="./eisenhower-matrix.jpg">
     <a 
-      class="more-inf" 
+      class="more-info" 
       href="https://goal-life.com/page/method/matrix-eisenhower"
     >Want more details?</a>
   </div>
 
-  <div class="centered-main-page-element">
+  <div class="main-screen">
 
-    <p id="topSectionForAddingElementToList">
+    <p id="add-item">
 
       <label for="new-task">Add Item</label>
 
@@ -37,7 +37,7 @@
 
     <h3>Todo</h3>
 
-    <ul id="incompleteTasks">
+    <ul id="incompleted-tasks">
 
       <li>
         <input type="checkbox">
