--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
   <div class="header">
-    <img src="./eisenhower-matrix.jpg">
+    <img class="header-img" src="./eisenhower-matrix.jpg">
     <a 
       class="more-info" 
       href="https://goal-life.com/page/method/matrix-eisenhower"
@@ -26,50 +26,50 @@
 
     <p id="add-item">
 
-      <label for="new-task">Add Item</label>
+      <label class="h3" for="new-task">Add Item</label>
 
       <div class="task-row-wrapper">
-        <input id="new-task" class="task" type="text">
-        <button>Add</button>
+        <input id="new-task" class="task text-input" type="text">
+        <button class="button">Add</button>
       </div>
 
     </p>
 
     <h3>Todo</h3>
 
-    <ul id="incompleted-tasks">
+    <ul class="list" id="incompleted-tasks">
 
       <li>
-        <input type="checkbox">
-        <label class="task">Pay Bills</label>
-        <input type="text" class="task">
+        <input class="checkbox" type="checkbox">
+        <label class="label task">Pay Bills</label>
+        <input type="text" class="task text-input">
 
-        <button class="edit">Edit</button>
-        <button class="delete"><img src="./remove.svg"></button>
+        <button class="button edit">Edit</button>
+        <button class="button delete"><img class="icon-img" src="./remove.svg"></button>
       </li>
 
       <li class="editMode">
-        <input type="checkbox">
-        <label class="task">Go Shopping</label>
-        <input type="text" value="Go Shopping" class="task">
+        <input class="checkbox" type="checkbox">
+        <label class="label task">Go Shopping</label>
+        <input type="text" value="Go Shopping" class="task text-input">
 
-        <button class="edit">Save</button>
-        <button class="delete"><img src="./remove.svg"></button>
+        <button class="button edit">Save</button>
+        <button class="button delete"><img class="icon-img" src="./remove.svg"></button>
       </li>
 
     </ul>
 
     <h3>Completed</h3>
 
-    <ul id="completed-tasks">
+    <ul class="list" id="completed-tasks">
       
       <li>
-        <input type="checkbox" checked>
-        <label class="task">See the Doctor</label>
-        <input type="text" class="task">
+        <input class="checkbox" type="checkbox" checked>
+        <label class="label task">See the Doctor</label>
+        <input type="text" class="task text-input">
         
-        <button class="edit">Edit</button>
-        <button class="delete"><img src="./remove.svg"></button>
+        <button class="button edit">Edit</button>
+        <button class="button delete"><img class="icon-img" src="./remove.svg"></button>
       </li>
 
     </ul>
