refactor(extended-1.2): add alt to img tags

--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 <body>
 
   <header class="header">
-    <img class="header-img" src="./eisenhower-matrix.jpg">
+    <img class="header-img" src="./eisenhower-matrix.jpg" alt="ToDo App Banner">
     <a 
       class="more-info" 
       href="https://goal-life.com/page/method/matrix-eisenhower"
@@ -46,7 +46,7 @@
           <input type="text" class="task text-input">
 
           <button class="button edit">Edit</button>
-          <button class="button delete"><img class="icon-img" src="./remove.svg"></button>
+          <button class="button delete"><img class="icon-img" src="./remove.svg" alt="Remove Icon"></button>
         </li>
 
         <li class="editMode">
@@ -55,7 +55,7 @@
           <input type="text" value="Go Shopping" class="task text-input">
 
           <button class="button edit">Save</button>
-          <button class="button delete"><img class="icon-img" src="./remove.svg"></button>
+          <button class="button delete"><img class="icon-img" src="./remove.svg" alt="Remove Icon"></button>
         </li>
 
       </ul>
@@ -72,7 +72,7 @@
           <input type="text" class="task text-input">
           
           <button class="button edit">Edit</button>
-          <button class="button delete"><img class="icon-img" src="./remove.svg"></button>
+          <button class="button delete"><img class="icon-img" src="./remove.svg" alt="Remove Icon"></button>
         </li>
 
       </ul>
